feat(ui): enhance snapshot notifications with detailed messages and i18n updates
- Replace addToast with addNotification for snapshot creation, deletion, and cloud operations
- Include snapshot and game names in notification details for better user feedback
- Add missing i18n keys for "deleteSnapshot" and "downloadSuccess" in English, Spanish, and Portuguese
- Adjust capitalization in cloud-related terms for consistency
- Remove redundant addToast call in toastContext to streamline notification logic

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -34,6 +34,7 @@
     "restore": "Restore",
     "delete": "Delete",
     "editGame": "Edit Game",
+    "deleteSnapshot": "Delete Snapshot",
     "snapshotNamePlaceholder": "Snapshot name (optional)",
     "cancel": "Cancel",
     "create": "Create",
@@ -132,6 +133,7 @@
     "badge": "Cloud",
     "uploadComplete": "Cloud Upload Complete",
     "uploaded": "uploaded to cloud",
+    "downloadSuccess": "Snapshot downloaded from cloud successfully",
     "syncing": "Syncing...",
     "lastUploaded": "Last uploaded",
     "refreshCloudList": "Refresh cloud list",
