--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -34,6 +34,7 @@
     "restore": "Restaurar",
     "delete": "Eliminar",
     "editGame": "Editar Juego",
+    "deleteSnapshot": "Eliminar Snapshot",
     "snapshotNamePlaceholder": "Nombre del snapshot (opcional)",
     "cancel": "Cancelar",
     "create": "Crear",
@@ -122,16 +123,17 @@
     "backupDestination": "Destino del Backup",
     "localOnly": "Solo Local",
     "cloudOnly": "Solo Nube",
-    "both": "Local & Nube",
+    "both": "Local & nube",
     "viewAll": "Ver Todos",
-    "howItWorks": "Cómo Funciona el Backup en la Nube",
+    "howItWorks": "Cómo Funciona el Backup en la nube",
     "namingSaves": "Nombrando Tus Partidas",
-    "deleteFromCloud": "Eliminar de la Nube",
+    "deleteFromCloud": "Eliminar de la nube",
     "uploadToCloud": "Subir a la nube",
     "backedUp": "Backup en la nube",
-    "badge": "Nube",
+    "badge": "nube",
     "uploadComplete": "Subida a la Nube Completada",
     "uploaded": "subido a la nube",
+    "downloadSuccess": "Snapshot descargado de la nube correctamente",
     "syncing": "Sincronizando...",
     "lastUploaded": "Última subida",
     "refreshCloudList": "Actualizar lista de nube",
