--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -34,6 +34,7 @@
     "restore": "Restaurar",
     "delete": "Excluir",
     "editGame": "Editar Jogo",
+    "deleteSnapshot": "Excluir Snapshot",
     "snapshotNamePlaceholder": "Nome do snapshot (opcional)",
     "cancel": "Cancelar",
     "create": "Criar",
@@ -122,16 +123,17 @@
     "backupDestination": "Destino do Backup",
     "localOnly": "Apenas Local",
     "cloudOnly": "Apenas Nuvem",
-    "both": "Local & Nuvem",
+    "both": "Local & nuvem",
     "viewAll": "Ver Todos",
-    "howItWorks": "Como Funciona o Backup na Nuvem",
+    "howItWorks": "Como Funciona o Backup na nuvem",
     "namingSaves": "Nomeando Seus Saves",
-    "deleteFromCloud": "Excluir da Nuvem",
+    "deleteFromCloud": "Excluir da nuvem",
     "uploadToCloud": "Enviar para nuvem",
     "backedUp": "Backup na nuvem",
-    "badge": "Nuvem",
+    "badge": "nuvem",
     "uploadComplete": "Upload para Nuvem Concluído",
     "uploaded": "enviado para nuvem",
+    "downloadSuccess": "Snapshot baixado da nuvem com sucesso",
     "syncing": "Sincronizando...",
     "lastUploaded": "Último envio",
     "refreshCloudList": "Atualizar lista da nuvem",
